--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prepublish": "make build",
+    "prepublishOnly": "make build",
     "test": "make test",
     "lint": "./pre-commit"
   },
@@ -43,7 +43,7 @@
     "react-select": "1.0.1",
     "react-sortable-hoc": "0.6.8",
     "react-transition-group": "1.2.1",
-    "recompose": "0.26.0",
+    "recompose": "0.30.0",
     "redux": "3.6.0",
     "redux-localstorage": "1.0.0-rc5",
     "redux-localstorage-debounce": "0.1.0",
@@ -52,28 +52,28 @@
   },
   "devDependencies": {
     "babel-core": "6.26.3",
-    "babel-eslint": "8.2.6",
-    "babel-loader": "6.2.10",
+    "babel-eslint": "10.0.3",
+    "babel-loader": "6.4.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-env": "1.7.0",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "babel-register": "6.26.0",
-    "babel-runtime": "6.11.6",
+    "babel-runtime": "6.26.0",
     "chai": "3.5.0",
     "co-body": "4.2.0",
     "css-loader": "0.25.0",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
-    "eslint": "4.18.2",
+    "eslint": "6.8.0",
     "eslint-config-prettier": "6.10.0",
     "eslint-plugin-import": "2.20.1",
     "eslint-import-resolver-node": "0.3.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-mocha": "4.11.0",
-    "eslint-plugin-mocha-no-only": "0.0.6",
+    "eslint-plugin-mocha": "6.3.0",
+    "eslint-plugin-mocha-no-only": "1.1.0",
     "eslint-plugin-prettier": "3.1.2",
-    "eslint-plugin-react": "7.6.1",
+    "eslint-plugin-react": "7.18.3",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "2.22.0",
